--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,7 +1,7 @@
 .home{
   .text_zone{
     position: absolute;
-    left: 10%;
+    left: 11%;
     top: 50%;
     transform: translateY(-50%);
     width: 40%;
@@ -9,28 +9,31 @@
   }
   h1{
     color: white;
-    font-size: 50px;
+    font-size: 75px;
+    line-height: 70px;
     margin: 0;
+    margin-left: 20px;
     font-family: 'Coolvetica';
     font-weight: 400;
     &::before{
       content: '<h1>';
       font-family: 'La Belle Aurore';
       color: #ffd700;
-      font-size: 18px;
+      font-size: 20px;
       position: absolute;
-      margin-top: -40px;
-      left:15px;
+      margin-top: -48px;
+      left: 5px;
       opacity: 0.6;
     }
     &::after{
+      display: block;
       content: '</h1>';
       font-family: 'La Belle Aurore';
       color: #ffd700;
-      font-size: 18px;
+      font-size: 20px;
       position: absolute;
-      margin-top: 18px;
-      margin-left: 20px;
+      margin-top: -10px;
+      margin-left: -15px;
       animation: fadeIn 1s 1.7s backwards;
       opacity: 0.6;
     }
@@ -47,7 +50,7 @@
 
 h2{
   color: #8d8d8d;
-  margin-top: 20px;
+  margin-top: 48px;
   font-weight: 400;
   font-size: 11px;
   font-family: sans-serif;
