--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -38,7 +38,8 @@
   animation-delay: 1s;
 }
 
-.container.about_page{
+.container.about_page,
+.container.skills_page{
   
     h1 {
       font-size: 68px;
