--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -39,7 +39,8 @@
 }
 
 .container.about_page,
-.container.skills_page{
+.container.skills_page,
+.container.contact_page{
   
     h1 {
       font-size: 68px;
