--- a/src/components/Portfolio/Card/Card.scss
+++ b/src/components/Portfolio/Card/Card.scss
@@ -21,26 +21,23 @@
       color:#fff;
     }
     .skill_tags{
-      border-top: 2px solid #fff;  
+      border-top: 2px solid #ffd700;  
     }
     .skill_tag{
      color: #fff;   
     }
     .buttons{
       .demo_btn{
-      background: #fff;
-      a{
-        color: #02273b;
-      }
+      background: #ffd700;
     }
     .git_btn{
       a{
-        color: #fff;
+        color: #ffd700;
       }
     }
     .pdf_btn{
       a{
-        color: #fff;
+        color: #ffd700;
       }
     }
     }
