--- a/src/components/Contact/Card/Card.scss
+++ b/src/components/Contact/Card/Card.scss
@@ -6,10 +6,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   .info_card{
     position: relative;
     width: 450px;
-    height: 600px;
+    height: 680px;
     margin: 30px;
     background: linear-gradient(to bottom, #d2b302, #507707 ,#064669 ,#063a57);
     border-radius: 20px;
@@ -22,6 +23,10 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    opacity: 0;
+    animation: fadeIn 2s forwards;
+    animation-delay: 2s;
+
     &::before{
       content: "";
       position: absolute;
@@ -34,63 +39,162 @@
       pointer-events: none;
       filter: blur(5px);
     }
-    .center_icon{
-      position: relative;
-      width: 220px;
-      height: 150px;
-      background: #022c43;
-      border-bottom-left-radius: 100px;
-      border-bottom-right-radius: 100px;
-      z-index: 3;
-      box-shadow: 0 10px 0 rgba(0,0,0,0.1),
-      inset 0 -8px 0 #fff;
-      &::before{
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -50px;
-        width: 50px;
-        height: 50px;
-        // background: red;
-        border-top-right-radius: 50px;
-        box-shadow: 15px -15px 0 15px #022c43;
-      }
-      &::after{
-        content: '';
-        position: absolute;
-        top: 0;
-        right: -50px;
-        width: 50px;
-        height: 50px;
-        // background: red;
-        border-top-left-radius: 50px;
-        box-shadow: -15px -15px 0 15px #022c43;
+
+    &:hover{
+      .center_icon{
+       .icon_border{
+          &::before{
+            inset: -10px ;
+          }
+          img{
+            opacity: 0;
+          }
+        } 
       }
     }
+
+    .center_icon{
+      position: relative;
+      width: 250px;
+      height: 250px;
+      top: -10px;
+      background: #022c43;
+      border-radius: 50%;
+      box-shadow: 0 10px 0 rgba(0,0,0,0.1),
+      inset 0 -8px 0 #fff;
+
+      .icon_border{
+        position: relative;
+        top: 10px;
+        left: 12px;
+        width: 225px;
+        height: 225px;
+        border-radius: 50%;
+        background: #00162c;
+        overflow: hidden;
+
+        &::before{
+          content: "";
+          position: absolute;
+          inset: -10px 80px;
+          background: linear-gradient(135deg, orange, cyan);
+          animation: rotate 4s linear infinite;
+          transition: 0.3s;
+        }
+
+        &::after{
+          content: "";
+          position: absolute;
+          inset: 4px;
+          background: #022c43;
+          border-radius: 50%;
+        }
+
+        .icon_content{
+          position: absolute;
+          inset: 10px;
+          border: 4px solid #00162c;
+          border-radius: 50%;
+          z-index: 30;
+          overflow: hidden;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          text-align: center;
+          &:hover{
+            img{
+              display: none;
+            }
+          }
+          img{
+            position: absolute;
+            top: -10px;
+            left: 0;
+            width: 100%;
+            height: 130%;
+            transition: 0.5s;
+          }
+          h2{
+              margin-top: 70px;
+              font-size: 20px;
+              font-weight: 600;
+              color: #fff;
+            span{
+              font-size: 16px;
+              color: #858585;
+            }
+          }
+          .more_info{
+            display: block;
+            width: 50%;
+            border-radius: 20px;
+            height: 30px;
+            background: #fff;
+            line-height: 28px;
+            transition: 0.5s;
+            &:hover{
+              width: 60%;
+              a{
+                font-size: 18px;
+                letter-spacing: 1px;
+              }
+            }
+            a{
+            display: block;
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            text-decoration: none;
+            font-size: 16px;
+            color: #00162c;
+            font-weight: 600;
+            cursor: pointer;
+            transition: 0.5s;
+          }
+          }
+          
+        }
+
+      }
+    }
+    
     .contact_info{
       position: absolute;
       width: 100%;
-      height: 90%;
+      height: 80%;
       bottom: 0;
       text-align: center;
       display: flex;
       justify-content: center;
       flex-direction: column;
       align-items: center;
+
       h2{
         color: #fff;
         font-family: 'Coolvetica';
         font-size: 48px;
         margin: 0;
       }
+
       p{
         margin: 10px;
         font-size: 18px;
         font-weight: 400;
       }
+
       .info_icon{
         font-size: 40px;
       }
+
     }
+  }
+}
+
+@keyframes rotate {
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
   }
 }
