--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,3 +1,11 @@
+.container{
+  .text_zone{
+  p{
+    font-family: 'OTWelcomeRA';
+  }
+}
+}
+
 .contact_form {
   width: 100%;
   margin-top: 20px;
