--- a/src/components/Contact/Card/Card.scss
+++ b/src/components/Contact/Card/Card.scss
@@ -109,9 +109,10 @@
           img{
             position: absolute;
             top: -10px;
-            left: 0;
-            width: 100%;
-            height: 130%;
+            left: -10px;
+            width: 110%;
+            height: 110%;
+            object-fit: cover;
             transition: 0.5s;
           }
           h2{
