--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -1,3 +1,12 @@
+.text_zone{
+  p{
+    a{
+      color: #fff;
+      font-size: 18px;
+    }
+  }
+}
+
 .skill_list{
   width: 50%;
   padding-top: 150px;
